fix nav bar spacing

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,3 +1,13 @@
+
+#nav-bar {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 #logo {
     height: 12.5vh;
     width: auto;
